Update generated content

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Cà phê Việt trước quy định phòng chống phá rừng của EU",
+    "content": "Cà phê Việt Nam đang nỗ lực hoàn thiện hệ thống truy xuất nguồn gốc để đáp ứng quy định chống phá rừng của EU (EUDR) có hiệu lực từ 2026. EUDR yêu cầu cà phê xuất khẩu vào EU phải chứng minh không liên quan đến nạn phá rừng sau 31-12-2020, điều này tạo ra nhiều thách thức cho doanh nghiệp. Bộ Nông nghiệp và Môi trường đã triển khai hệ thống dữ liệu cho các vùng trồng cà phê để hỗ trợ doanh nghiệp và nông dân tuân thủ quy định này.",
+    "link": "https://tuoitre.vn/ca-phe-viet-truoc-quy-dinh-phong-chong-pha-rung-cua-eu-20250311120203543.htm",
+    "cat": "kinh-doanh",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Cà phê Việt Nam đang làm gì để đáp ứng quy định EUDR của EU?",
+    "answers": [
+      {
+        "text": "Hoàn thiện hệ thống truy xuất nguồn gốc.",
+        "correct": true
+      },
+      {
+        "text": "Giảm sản lượng cà phê xuất khẩu.",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường sử dụng thuốc bảo vệ thực vật.",
+        "correct": false
+      },
+      {
+        "text": "Tìm kiếm thị trường mới ngoài EU.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thanh tra nghi vấn hướng dẫn viên nước ngoài đón khách chui ở Phú Quốc",
     "content": "Thanh tra Sở Du lịch Kiên Giang đang điều tra nghi vấn hai hướng dẫn viên nước ngoài đón khách du lịch trái phép tại Phú Quốc. Đoàn thanh tra đã kiểm tra hoạt động của các hướng dẫn viên và phát hiện một hướng dẫn viên tự do vi phạm quy định. Đề xuất xử phạt hành chính ông này khoảng 17,5 triệu đồng, trong khi hai người nước ngoài vẫn đang được theo dõi để có biện pháp xử lý nếu có đủ căn cứ xác nhận vi phạm.",
     "link": "https://tuoitre.vn/thanh-tra-nghi-van-huong-dan-vien-nuoc-ngoai-don-khach-chui-o-phu-quoc-20250311114359621.htm",
@@ -174,6 +201,33 @@
       },
       {
         "text": "Năm",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bỏ việc để đưa con đi khắp thế giới, cặp đôi \"vỡ mộng\" sau 3 tháng",
+    "content": "Vợ chồng anh Taylor và chị Megan Kovar, đến từ Texas, đã bán 4 công ty để thực hiện ước mơ du lịch vòng quanh thế giới cùng ba con của mình. Tuy nhiên, sau chỉ 3 tháng, họ phát hiện cuộc sống du mục không phù hợp với các con, khi các bé nhớ nhà và bạn bè. Dù đã trải qua nhiều trải nghiệm thú vị, gia đình quyết định trở về nhà để tiếp tục cuộc sống ổn định và nhận ra rằng nhịp sống quen thuộc cũng rất đáng giá.",
+    "link": "https://dantri.com.vn/giao-duc/bo-viec-de-dua-con-di-khap-the-gioi-cap-doi-vo-mong-sau-3-thang-20250310102224995.htm",
+    "cat": "gia-dinh",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Tại sao gia đình anh Taylor và chị Megan Kovar quyết định quay về nhà sau 3 tháng du lịch?",
+    "answers": [
+      {
+        "text": "Vì các con họ nhớ nhà và bạn bè.",
+        "correct": true
+      },
+      {
+        "text": "Họ không thích những điểm đến mới lạ.",
+        "correct": false
+      },
+      {
+        "text": "Chi phí đi du lịch quá cao.",
+        "correct": false
+      },
+      {
+        "text": "Họ không tìm được thời gian để nghỉ ngơi.",
         "correct": false
       }
     ]
@@ -2027,37 +2081,6 @@
     ]
   },
   {
-    "title": "Người trẻ chọn sếp",
-    "content": "Bài viết đề cập đến xu hướng ngày càng tăng trong giới trẻ khi chọn lựa sếp làm yếu tố quyết định khi tìm việc. Hà My và Thế Thành, hai nhân viên trẻ, đã chia sẻ trải nghiệm của họ về tầm quan trọng của người quản lý trong môi trường làm việc, cho thấy rằng sếp có khả năng lãnh đạo tốt và đồng cảm sẽ thu hút nhân tài. Các nghiên cứu chỉ ra rằng nhân viên trẻ ngày nay ưu tiên chọn sếp phù hợp hơn là chỉ đơn thuần tìm kiếm công ty có chế độ đãi ngộ tốt.",
-    "link": "https://vnexpress.net/nguoi-tre-chon-sep-4857254.html",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao người trẻ lại chọn sếp khi tìm việc?",
-    "answers": [
-      {
-        "text": "Vì họ muốn làm việc với người có khả năng lãnh đạo tốt và phù hợp với phong cách làm việc của mình.",
-        "correct": true
-      },
-      {
-        "text": "Bởi vì họ thích làm việc trong môi trường có nhiều cơ hội thăng tiến.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ ưu tiên lương thưởng cao hơn mọi yếu tố khác.",
-        "correct": false
-      },
-      {
-        "text": "Bởi vì họ không muốn làm việc dưới sự quản lý nghiêm khắc.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ muốn có thời gian làm việc thoải mái.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Xe con phóng nhanh gặp xe tải bất ngờ mở cửa",
     "content": "Vào ngày 10/3 tại đường tỉnh 78, Ba Vì, một vụ việc giao thông đã xảy ra khi một xe con đang phóng nhanh với tốc độ hơn 60 km/h gặp phải xe tải đang đỗ lề đường bất ngờ mở cửa. Mặc dù tài xế xe con gắn camera hành trình không giảm tốc độ, may mắn là không có tai nạn xảy ra. Các chuyên gia nhấn mạnh tầm quan trọng của việc giảm tốc độ khi gặp xe lớn đỗ, đồng thời cảnh báo tài xế xe tải cần quan sát kỹ trước khi mở cửa xe để tránh sự cố. Theo luật mới, hành vi mở cửa không an toàn có thể bị phạt đến 22 triệu đồng nếu dẫn đến tai nạn.",
     "link": "https://vnexpress.net/xe-con-phong-nhanh-gap-xe-tai-bat-ngo-mo-cua-4859155.html",
@@ -2111,6 +2134,37 @@
       },
       {
         "text": "Không cần lo lắng về sự phát triển của AI",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Người trẻ chọn sếp",
+    "content": "Bài viết đề cập đến xu hướng ngày càng tăng trong giới trẻ khi chọn lựa sếp làm yếu tố quyết định khi tìm việc. Hà My và Thế Thành, hai nhân viên trẻ, đã chia sẻ trải nghiệm của họ về tầm quan trọng của người quản lý trong môi trường làm việc, cho thấy rằng sếp có khả năng lãnh đạo tốt và đồng cảm sẽ thu hút nhân tài. Các nghiên cứu chỉ ra rằng nhân viên trẻ ngày nay ưu tiên chọn sếp phù hợp hơn là chỉ đơn thuần tìm kiếm công ty có chế độ đãi ngộ tốt.",
+    "link": "https://vnexpress.net/nguoi-tre-chon-sep-4857254.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao người trẻ lại chọn sếp khi tìm việc?",
+    "answers": [
+      {
+        "text": "Vì họ muốn làm việc với người có khả năng lãnh đạo tốt và phù hợp với phong cách làm việc của mình.",
+        "correct": true
+      },
+      {
+        "text": "Bởi vì họ thích làm việc trong môi trường có nhiều cơ hội thăng tiến.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ ưu tiên lương thưởng cao hơn mọi yếu tố khác.",
+        "correct": false
+      },
+      {
+        "text": "Bởi vì họ không muốn làm việc dưới sự quản lý nghiêm khắc.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ muốn có thời gian làm việc thoải mái.",
         "correct": false
       }
     ]
@@ -2348,33 +2402,6 @@
     ]
   },
   {
-    "title": "Đời buồn của cậu bé ước được đến trường",
-    "content": "Bình An, 9 tuổi, mơ ước được đến trường nhưng đang phải đối mặt với căn bệnh ung thư máu. Gia đình cậu sống trong hoàn cảnh khó khăn, với thu nhập thấp và không đủ khả năng chi trả cho việc điều trị. Dù gặp nhiều khó khăn, mẹ cậu, chị Cẩm Tuyết, vẫn không từ bỏ hy vọng và cùng con chiến đấu với bệnh tật. Chương trình Mặt trời Hy vọng được triển khai nhằm hỗ trợ những trẻ em có hoàn cảnh khó khăn như Bình An.",
-    "link": "https://vnexpress.net/doi-buon-cua-cau-be-uoc-duoc-den-truong-4859070.html",
-    "cat": "giao-duc",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Bình An ước mơ điều gì trong cuộc sống?",
-    "answers": [
-      {
-        "text": "Được đến trường",
-        "correct": true
-      },
-      {
-        "text": "Có nhiều bạn bè",
-        "correct": false
-      },
-      {
-        "text": "Có sức khỏe tốt",
-        "correct": false
-      },
-      {
-        "text": "Được đi du lịch",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Con trai Courtois nguy cơ vô gia cư",
     "content": "Elsa Izac, tình cũ của thủ môn Thibaut Courtois, đang đối mặt với nguy cơ bị tịch thu nhà do khoản nợ 63.000 bảng tiền thế chấp. Cô và con trai 7 tuổi, Enzo, sống trong một ngôi nhà trị giá 3 triệu bảng tại Wimbledon, London, nhưng hiện tại đang gặp khó khăn tài chính. Elsa cho rằng Courtois không hỗ trợ đủ cho mẹ con cô, mặc dù thủ môn này có thu nhập hàng triệu USD từ câu lạc bộ Real Madrid.",
     "link": "https://vnexpress.net/con-trai-courtois-nguy-co-vo-gia-cu-4859328.html",
@@ -2397,6 +2424,33 @@
       },
       {
         "text": "Courtois không muốn chu cấp cho họ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đời buồn của cậu bé ước được đến trường",
+    "content": "Bình An, 9 tuổi, mơ ước được đến trường nhưng đang phải đối mặt với căn bệnh ung thư máu. Gia đình cậu sống trong hoàn cảnh khó khăn, với thu nhập thấp và không đủ khả năng chi trả cho việc điều trị. Dù gặp nhiều khó khăn, mẹ cậu, chị Cẩm Tuyết, vẫn không từ bỏ hy vọng và cùng con chiến đấu với bệnh tật. Chương trình Mặt trời Hy vọng được triển khai nhằm hỗ trợ những trẻ em có hoàn cảnh khó khăn như Bình An.",
+    "link": "https://vnexpress.net/doi-buon-cua-cau-be-uoc-duoc-den-truong-4859070.html",
+    "cat": "giao-duc",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Bình An ước mơ điều gì trong cuộc sống?",
+    "answers": [
+      {
+        "text": "Được đến trường",
+        "correct": true
+      },
+      {
+        "text": "Có nhiều bạn bè",
+        "correct": false
+      },
+      {
+        "text": "Có sức khỏe tốt",
+        "correct": false
+      },
+      {
+        "text": "Được đi du lịch",
         "correct": false
       }
     ]
@@ -2715,33 +2769,6 @@
     ]
   },
   {
-    "title": "Triệu hồi sản phẩm thể hiện trách nhiệm của hãng xe",
-    "content": "Triệu hồi sản phẩm là một hành động quan trọng trong ngành ôtô, thể hiện trách nhiệm của các hãng xe đối với khách hàng khi phát hiện rủi ro về sản phẩm. Mới đây, Yamaha Motor Việt Nam đã triệu hồi gần 160.000 xe sản xuất từ tháng 10/2021 đến tháng 11/2024 để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa. Hãng xe này cam kết sẽ đảm bảo an toàn cho người dùng và thực hiện kiểm tra miễn phí cho khách hàng.",
-    "link": "https://vnexpress.net/trieu-hoi-san-pham-the-hien-trach-nhiem-cua-hang-xe-4859319.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao Yamaha Motor Việt Nam triệu hồi gần 160.000 xe?",
-    "answers": [
-      {
-        "text": "Để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa.",
-        "correct": true
-      },
-      {
-        "text": "Để tăng doanh số bán hàng.",
-        "correct": false
-      },
-      {
-        "text": "Để giới thiệu mẫu xe mới.",
-        "correct": false
-      },
-      {
-        "text": "Để thay đổi thiết kế xe.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "6 nhóm thực phẩm người hen phế quản nên tránh",
     "content": "Bài viết liệt kê 6 nhóm thực phẩm mà người mắc bệnh hen phế quản nên tránh để phòng ngừa các cơn hen tái phát. Các loại thực phẩm này bao gồm thực phẩm giàu calo, thực phẩm có gas, thực phẩm chứa chất bảo quản, thực phẩm gây dị ứng, thực phẩm mặn và các chất béo không lành mạnh. Những thực phẩm này có thể làm trầm trọng thêm tình trạng bệnh và gây khó khăn trong việc hô hấp. Người bệnh nên chú ý đến chế độ ăn uống để kiểm soát triệu chứng hiệu quả hơn.",
     "link": "https://vnexpress.net/6-nhom-thuc-pham-nguoi-hen-phe-quan-nen-tranh-4859245.html",
@@ -2768,6 +2795,33 @@
       },
       {
         "text": "Thực phẩm chiên và đồ ăn nhanh",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Triệu hồi sản phẩm thể hiện trách nhiệm của hãng xe",
+    "content": "Triệu hồi sản phẩm là một hành động quan trọng trong ngành ôtô, thể hiện trách nhiệm của các hãng xe đối với khách hàng khi phát hiện rủi ro về sản phẩm. Mới đây, Yamaha Motor Việt Nam đã triệu hồi gần 160.000 xe sản xuất từ tháng 10/2021 đến tháng 11/2024 để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa. Hãng xe này cam kết sẽ đảm bảo an toàn cho người dùng và thực hiện kiểm tra miễn phí cho khách hàng.",
+    "link": "https://vnexpress.net/trieu-hoi-san-pham-the-hien-trach-nhiem-cua-hang-xe-4859319.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao Yamaha Motor Việt Nam triệu hồi gần 160.000 xe?",
+    "answers": [
+      {
+        "text": "Để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa.",
+        "correct": true
+      },
+      {
+        "text": "Để tăng doanh số bán hàng.",
+        "correct": false
+      },
+      {
+        "text": "Để giới thiệu mẫu xe mới.",
+        "correct": false
+      },
+      {
+        "text": "Để thay đổi thiết kế xe.",
         "correct": false
       }
     ]
