--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,60 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Lewis Hamilton và những câu hỏi ở Ferrari",
+    "content": "Lewis Hamilton sẽ bắt đầu mùa giải F1 2025 với Ferrari, nơi anh đặt mục tiêu vượt qua đồng đội Charles Leclerc và giành chức vô địch lần thứ tám trong sự nghiệp. Sau một mùa giải khó khăn với Mercedes, Hamilton đã quyết định chuyển sang Ferrari, đội đua nổi tiếng với lịch sử thành công nhưng chưa vô địch từ năm 2008. Mặc dù tuổi tác có thể là một yếu tố, Hamilton tin rằng anh có thể cạnh tranh tốt với Leclerc nhờ vào kinh nghiệm và khả năng giữ lốp.",
+    "link": "https://vnexpress.net/lewis-hamilton-va-nhung-cau-hoi-o-ferrari-4859364.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Mục tiêu tối thiểu của Lewis Hamilton tại Ferrari là gì?",
+    "answers": [
+      {
+        "text": "Vượt qua đồng đội Charles Leclerc",
+        "correct": true
+      },
+      {
+        "text": "Giành chức vô địch lần thứ tám",
+        "correct": false
+      },
+      {
+        "text": "Đạt ít nhất 10 chiến thắng",
+        "correct": false
+      },
+      {
+        "text": "Hoàn thành mùa giải trong top 5",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Amorim và dáng dấp của Mourinho phiên bản 2.0 ở Man Utd",
+    "content": "HLV Ruben Amorim đã áp dụng chiến thuật \"xe buýt hai tầng\" của Jose Mourinho giúp Man Utd có trận hòa 1-1 trước Arsenal trong khuôn khổ Ngoại hạng Anh. Dù khởi đầu không tốt với 8 trận thua trong 13 trận, Amorim đã cho thấy dấu hiệu tích cực khi đội bóng thực hiện phòng ngự phản công hiệu quả. Ông thừa nhận không muốn chơi phòng ngự quá nhiều, nhưng tình hình hiện tại buộc ông phải chọn lựa chiến thuật này để đạt kết quả tốt nhất.",
+    "link": "https://vnexpress.net/amorim-va-dang-dap-cua-mourinho-phien-ban-2-0-o-man-utd-4859232.html",
+    "cat": "the-thao",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Amorim đã áp dụng chiến thuật gì cho Man Utd trong trận hòa với Arsenal?",
+    "answers": [
+      {
+        "text": "Xe buýt hai tầng",
+        "correct": true
+      },
+      {
+        "text": "Tấn công tổng lực",
+        "correct": false
+      },
+      {
+        "text": "Phòng ngự biên",
+        "correct": false
+      },
+      {
+        "text": "Chơi pressing cao",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Cà phê Việt trước quy định phòng chống phá rừng của EU",
     "content": "Cà phê Việt Nam đang nỗ lực hoàn thiện hệ thống truy xuất nguồn gốc để đáp ứng quy định chống phá rừng của EU (EUDR) có hiệu lực từ 2026. EUDR yêu cầu cà phê xuất khẩu vào EU phải chứng minh không liên quan đến nạn phá rừng sau 31-12-2020, điều này tạo ra nhiều thách thức cho doanh nghiệp. Bộ Nông nghiệp và Môi trường đã triển khai hệ thống dữ liệu cho các vùng trồng cà phê để hỗ trợ doanh nghiệp và nông dân tuân thủ quy định này.",
     "link": "https://tuoitre.vn/ca-phe-viet-truoc-quy-dinh-phong-chong-pha-rung-cua-eu-20250311120203543.htm",
@@ -1983,6 +2037,37 @@
     ]
   },
   {
+    "title": "Người trẻ chọn sếp",
+    "content": "Bài viết đề cập đến xu hướng ngày càng tăng trong giới trẻ khi chọn lựa sếp làm yếu tố quyết định khi tìm việc. Hà My và Thế Thành, hai nhân viên trẻ, đã chia sẻ trải nghiệm của họ về tầm quan trọng của người quản lý trong môi trường làm việc, cho thấy rằng sếp có khả năng lãnh đạo tốt và đồng cảm sẽ thu hút nhân tài. Các nghiên cứu chỉ ra rằng nhân viên trẻ ngày nay ưu tiên chọn sếp phù hợp hơn là chỉ đơn thuần tìm kiếm công ty có chế độ đãi ngộ tốt.",
+    "link": "https://vnexpress.net/nguoi-tre-chon-sep-4857254.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao người trẻ lại chọn sếp khi tìm việc?",
+    "answers": [
+      {
+        "text": "Vì họ muốn làm việc với người có khả năng lãnh đạo tốt và phù hợp với phong cách làm việc của mình.",
+        "correct": true
+      },
+      {
+        "text": "Bởi vì họ thích làm việc trong môi trường có nhiều cơ hội thăng tiến.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ ưu tiên lương thưởng cao hơn mọi yếu tố khác.",
+        "correct": false
+      },
+      {
+        "text": "Bởi vì họ không muốn làm việc dưới sự quản lý nghiêm khắc.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ muốn có thời gian làm việc thoải mái.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hà Nội cho phép nâng chiều cao khu tập thể Thành Công lên 40 tầng",
     "content": "Hà Nội đã cho phép quận Ba Đình nghiên cứu phương án nâng chiều cao tối đa lên 40 tầng cho khu chung cư cũ Thành Công trong quá trình cải tạo, tái thiết. Quyết định này nhằm kết nối không gian hồ Thành Công với các khu vực xanh và mở rộng trục đường nội khu. Thành phố yêu cầu quận phải hoàn thiện phương án trình Sở Quy hoạch Kiến trúc trước ngày 25/3, trong khi cũng đề xuất nâng cao tầng cho các khu chung cư khác trên địa bàn.",
     "link": "https://vnexpress.net/ha-noi-cho-phep-nang-chieu-cao-khu-tap-the-thanh-cong-len-40-tang-4859359.html",
@@ -2067,37 +2152,6 @@
       },
       {
         "text": "Không cần lo lắng về sự phát triển của AI",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Người trẻ chọn sếp",
-    "content": "Bài viết đề cập đến xu hướng ngày càng tăng trong giới trẻ khi chọn lựa sếp làm yếu tố quyết định khi tìm việc. Hà My và Thế Thành, hai nhân viên trẻ, đã chia sẻ trải nghiệm của họ về tầm quan trọng của người quản lý trong môi trường làm việc, cho thấy rằng sếp có khả năng lãnh đạo tốt và đồng cảm sẽ thu hút nhân tài. Các nghiên cứu chỉ ra rằng nhân viên trẻ ngày nay ưu tiên chọn sếp phù hợp hơn là chỉ đơn thuần tìm kiếm công ty có chế độ đãi ngộ tốt.",
-    "link": "https://vnexpress.net/nguoi-tre-chon-sep-4857254.html",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao người trẻ lại chọn sếp khi tìm việc?",
-    "answers": [
-      {
-        "text": "Vì họ muốn làm việc với người có khả năng lãnh đạo tốt và phù hợp với phong cách làm việc của mình.",
-        "correct": true
-      },
-      {
-        "text": "Bởi vì họ thích làm việc trong môi trường có nhiều cơ hội thăng tiến.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ ưu tiên lương thưởng cao hơn mọi yếu tố khác.",
-        "correct": false
-      },
-      {
-        "text": "Bởi vì họ không muốn làm việc dưới sự quản lý nghiêm khắc.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ muốn có thời gian làm việc thoải mái.",
         "correct": false
       }
     ]
@@ -2389,6 +2443,33 @@
     ]
   },
   {
+    "title": "Toàn quốc dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
+    "content": "Phó thủ tướng Nguyễn Hòa Bình thông báo rằng số lượng đơn vị hành chính cấp xã trên toàn quốc sẽ giảm từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc sáp nhập này dự kiến sẽ hoàn thành vào tháng 6 năm 2025. Trung ương sẽ ban hành tiêu chí cho các địa phương để xây dựng phương án sắp xếp, đồng thời nâng cao chất lượng cán bộ cấp xã để tương đương với cán bộ cấp tỉnh.",
+    "link": "https://vnexpress.net/toan-quoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Việt Nam dự kiến có bao nhiêu đơn vị hành chính cấp xã sau khi sáp nhập?",
+    "answers": [
+      {
+        "text": "2.500",
+        "correct": true
+      },
+      {
+        "text": "10.000",
+        "correct": false
+      },
+      {
+        "text": "8.500",
+        "correct": false
+      },
+      {
+        "text": "5.000",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Cả nước dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
     "content": "Phó thủ tướng Nguyễn Hòa Bình cho biết cả nước dự kiến sẽ giảm số lượng đơn vị hành chính cấp xã từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc này dự kiến sẽ hoàn thành vào tháng 6 tới, với các tiêu chí sẽ được Trung ương ban hành để các địa phương lập phương án sắp xếp. Chất lượng cán bộ cấp xã cũng sẽ được nâng cao, nhằm tăng cường hiệu quả quản lý.",
     "link": "https://vnexpress.net/ca-nuoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
@@ -2415,33 +2496,6 @@
       },
       {
         "text": "3.500",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Toàn quốc dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
-    "content": "Phó thủ tướng Nguyễn Hòa Bình thông báo rằng số lượng đơn vị hành chính cấp xã trên toàn quốc sẽ giảm từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc sáp nhập này dự kiến sẽ hoàn thành vào tháng 6 năm 2025. Trung ương sẽ ban hành tiêu chí cho các địa phương để xây dựng phương án sắp xếp, đồng thời nâng cao chất lượng cán bộ cấp xã để tương đương với cán bộ cấp tỉnh.",
-    "link": "https://vnexpress.net/toan-quoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Việt Nam dự kiến có bao nhiêu đơn vị hành chính cấp xã sau khi sáp nhập?",
-    "answers": [
-      {
-        "text": "2.500",
-        "correct": true
-      },
-      {
-        "text": "10.000",
-        "correct": false
-      },
-      {
-        "text": "8.500",
-        "correct": false
-      },
-      {
-        "text": "5.000",
         "correct": false
       }
     ]
@@ -4391,6 +4445,33 @@
     ]
   },
   {
+    "title": "Cúm ảnh hưởng công việc thế nào?",
+    "content": "Bệnh cúm có thể ảnh hưởng nghiêm trọng đến sức khỏe và hiệu suất làm việc của người lao động. Khi mắc cúm, người lao động thường phải nghỉ làm, gây gián đoạn trong sản xuất và cung ứng. Sự gia tăng ca mắc cúm trong doanh nghiệp có thể dẫn đến tổn thất kinh tế lớn, với hàng tỷ USD mất mát mỗi năm. Để giảm thiểu tác động của cúm, việc tiêm vaccine hàng năm là rất cần thiết.",
+    "link": "https://vnexpress.net/cum-anh-huong-cong-viec-the-nao-4859106.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Bệnh cúm ảnh hưởng đến công việc như thế nào?",
+    "answers": [
+      {
+        "text": "Cúm làm giảm hiệu suất lao động và gây gián đoạn sản xuất.",
+        "correct": true
+      },
+      {
+        "text": "Cúm không ảnh hưởng gì đến công việc.",
+        "correct": false
+      },
+      {
+        "text": "Cúm chỉ gây ra mệt mỏi nhưng không cần nghỉ làm.",
+        "correct": false
+      },
+      {
+        "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "PVcomBank ưu đãi với lãi suất chưa đến 4%/năm",
     "content": "Ngân hàng TMCP Đại Chúng Việt Nam (PVcomBank) vừa công bố gói tín dụng ưu đãi mang tên 'Hành trình mới, sống trọn ước mơ' với lãi suất chỉ từ 3,99%/năm. Gói vay này được áp dụng cho cá nhân có nhu cầu mua nhà và hộ kinh doanh, với hạn mức vay lên đến 85% giá trị tài sản và thời gian vay tối đa 35 năm. PVcomBank cũng cam kết đơn giản hóa thủ tục và linh hoạt trong việc chứng minh thu nhập để giúp khách hàng dễ dàng tiếp cận nguồn vốn.",
     "link": "https://tuoitre.vn/pvcombank-uu-dai-voi-lai-suat-chua-den-4-nam-20250310115138353.htm",
@@ -4444,33 +4525,6 @@
       },
       {
         "text": "Vì họ yếu sinh lý.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cúm ảnh hưởng công việc thế nào?",
-    "content": "Bệnh cúm có thể ảnh hưởng nghiêm trọng đến sức khỏe và hiệu suất làm việc của người lao động. Khi mắc cúm, người lao động thường phải nghỉ làm, gây gián đoạn trong sản xuất và cung ứng. Sự gia tăng ca mắc cúm trong doanh nghiệp có thể dẫn đến tổn thất kinh tế lớn, với hàng tỷ USD mất mát mỗi năm. Để giảm thiểu tác động của cúm, việc tiêm vaccine hàng năm là rất cần thiết.",
-    "link": "https://vnexpress.net/cum-anh-huong-cong-viec-the-nao-4859106.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Bệnh cúm ảnh hưởng đến công việc như thế nào?",
-    "answers": [
-      {
-        "text": "Cúm làm giảm hiệu suất lao động và gây gián đoạn sản xuất.",
-        "correct": true
-      },
-      {
-        "text": "Cúm không ảnh hưởng gì đến công việc.",
-        "correct": false
-      },
-      {
-        "text": "Cúm chỉ gây ra mệt mỏi nhưng không cần nghỉ làm.",
-        "correct": false
-      },
-      {
-        "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
         "correct": false
       }
     ]
@@ -4649,37 +4703,6 @@
       },
       {
         "text": "Bệnh viện An Bình",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Những bệnh trẻ thường mắc khi trời nồm",
-    "content": "Trẻ nhỏ thường mắc các bệnh như tiêu chảy cấp, viêm phổi, hen phế quản khi thời tiết nồm ẩm, do độ ẩm cao tạo điều kiện cho virus và vi khuẩn phát triển. Theo bác sĩ Nguyễn Thị Hương, môi trường ẩm ướt làm gia tăng nguy cơ nhiễm trùng hô hấp và các bệnh truyền nhiễm. Để phòng ngừa, phụ huynh nên chú ý đến chế độ dinh dưỡng và vệ sinh cho trẻ, giữ nhà cửa thông thoáng, khô ráo.",
-    "link": "https://vnexpress.net/nhung-benh-tre-thuong-mac-khi-troi-nom-4859071.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Trẻ em thường mắc bệnh gì khi trời nồm ẩm?",
-    "answers": [
-      {
-        "text": "Tiêu chảy cấp",
-        "correct": true
-      },
-      {
-        "text": "Đau bụng",
-        "correct": false
-      },
-      {
-        "text": "Cảm lạnh",
-        "correct": false
-      },
-      {
-        "text": "Viêm dạ dày",
-        "correct": false
-      },
-      {
-        "text": "Bệnh tiểu đường",
         "correct": false
       }
     ]
