--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -556,6 +556,37 @@
     ]
   },
   {
+    "title": "Rối loạn tâm thần do sán làm tổ trong não",
+    "content": "Một người đàn ông 41 tuổi ở Hà Nội đã gặp phải cơn co giật và động kinh do bị sán lợn làm tổ trong não. Bệnh nhân có triệu chứng đau đầu nhiều năm và được điều trị tâm thần nhưng không khỏi. Các xét nghiệm cho thấy anh bị tổn thương nghiêm trọng do ấu trùng sán lợn, gây ra rối loạn tâm thần. Bác sĩ khuyến cáo mọi người cần chú ý vệ sinh an toàn thực phẩm để phòng ngừa bệnh này.",
+    "link": "https://vnexpress.net/roi-loan-tam-than-do-san-lam-to-trong-nao-4859271.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Rối loạn tâm thần do nguyên nhân gì ở người đàn ông 41 tuổi?",
+    "answers": [
+      {
+        "text": "Sán lợn làm tổ trong não",
+        "correct": true
+      },
+      {
+        "text": "Viêm màng não",
+        "correct": false
+      },
+      {
+        "text": "U não",
+        "correct": false
+      },
+      {
+        "text": "Bệnh động kinh",
+        "correct": false
+      },
+      {
+        "text": "Nhiễm trùng đường ruột",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Cà phê Việt trước quy định phòng chống phá rừng của EU",
     "content": "Cà phê Việt Nam đang nỗ lực hoàn thiện hệ thống truy xuất nguồn gốc để đáp ứng quy định chống phá rừng của EU (EUDR) có hiệu lực từ 2026. EUDR yêu cầu cà phê xuất khẩu vào EU phải chứng minh không liên quan đến nạn phá rừng sau 31-12-2020, điều này tạo ra nhiều thách thức cho doanh nghiệp. Bộ Nông nghiệp và Môi trường đã triển khai hệ thống dữ liệu cho các vùng trồng cà phê để hỗ trợ doanh nghiệp và nông dân tuân thủ quy định này.",
     "link": "https://tuoitre.vn/ca-phe-viet-truoc-quy-dinh-phong-chong-pha-rung-cua-eu-20250311120203543.htm",
@@ -2810,6 +2841,33 @@
     ]
   },
   {
+    "title": "Đời buồn của cậu bé ước được đến trường",
+    "content": "Bình An, 9 tuổi, mơ ước được đến trường nhưng đang phải đối mặt với căn bệnh ung thư máu. Gia đình cậu sống trong hoàn cảnh khó khăn, với thu nhập thấp và không đủ khả năng chi trả cho việc điều trị. Dù gặp nhiều khó khăn, mẹ cậu, chị Cẩm Tuyết, vẫn không từ bỏ hy vọng và cùng con chiến đấu với bệnh tật. Chương trình Mặt trời Hy vọng được triển khai nhằm hỗ trợ những trẻ em có hoàn cảnh khó khăn như Bình An.",
+    "link": "https://vnexpress.net/doi-buon-cua-cau-be-uoc-duoc-den-truong-4859070.html",
+    "cat": "giao-duc",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Bình An ước mơ điều gì trong cuộc sống?",
+    "answers": [
+      {
+        "text": "Được đến trường",
+        "correct": true
+      },
+      {
+        "text": "Có nhiều bạn bè",
+        "correct": false
+      },
+      {
+        "text": "Có sức khỏe tốt",
+        "correct": false
+      },
+      {
+        "text": "Được đi du lịch",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Con trai Courtois nguy cơ vô gia cư",
     "content": "Elsa Izac, tình cũ của thủ môn Thibaut Courtois, đang đối mặt với nguy cơ bị tịch thu nhà do khoản nợ 63.000 bảng tiền thế chấp. Cô và con trai 7 tuổi, Enzo, sống trong một ngôi nhà trị giá 3 triệu bảng tại Wimbledon, London, nhưng hiện tại đang gặp khó khăn tài chính. Elsa cho rằng Courtois không hỗ trợ đủ cho mẹ con cô, mặc dù thủ môn này có thu nhập hàng triệu USD từ câu lạc bộ Real Madrid.",
     "link": "https://vnexpress.net/con-trai-courtois-nguy-co-vo-gia-cu-4859328.html",
@@ -2837,28 +2895,28 @@
     ]
   },
   {
-    "title": "Đời buồn của cậu bé ước được đến trường",
-    "content": "Bình An, 9 tuổi, mơ ước được đến trường nhưng đang phải đối mặt với căn bệnh ung thư máu. Gia đình cậu sống trong hoàn cảnh khó khăn, với thu nhập thấp và không đủ khả năng chi trả cho việc điều trị. Dù gặp nhiều khó khăn, mẹ cậu, chị Cẩm Tuyết, vẫn không từ bỏ hy vọng và cùng con chiến đấu với bệnh tật. Chương trình Mặt trời Hy vọng được triển khai nhằm hỗ trợ những trẻ em có hoàn cảnh khó khăn như Bình An.",
-    "link": "https://vnexpress.net/doi-buon-cua-cau-be-uoc-duoc-den-truong-4859070.html",
-    "cat": "giao-duc",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Bình An ước mơ điều gì trong cuộc sống?",
+    "title": "Toàn quốc dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
+    "content": "Phó thủ tướng Nguyễn Hòa Bình thông báo rằng số lượng đơn vị hành chính cấp xã trên toàn quốc sẽ giảm từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc sáp nhập này dự kiến sẽ hoàn thành vào tháng 6 năm 2025. Trung ương sẽ ban hành tiêu chí cho các địa phương để xây dựng phương án sắp xếp, đồng thời nâng cao chất lượng cán bộ cấp xã để tương đương với cán bộ cấp tỉnh.",
+    "link": "https://vnexpress.net/toan-quoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Việt Nam dự kiến có bao nhiêu đơn vị hành chính cấp xã sau khi sáp nhập?",
     "answers": [
       {
-        "text": "Được đến trường",
+        "text": "2.500",
         "correct": true
       },
       {
-        "text": "Có nhiều bạn bè",
+        "text": "10.000",
         "correct": false
       },
       {
-        "text": "Có sức khỏe tốt",
+        "text": "8.500",
         "correct": false
       },
       {
-        "text": "Được đi du lịch",
+        "text": "5.000",
         "correct": false
       }
     ]
@@ -2890,33 +2948,6 @@
       },
       {
         "text": "3.500",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Toàn quốc dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
-    "content": "Phó thủ tướng Nguyễn Hòa Bình thông báo rằng số lượng đơn vị hành chính cấp xã trên toàn quốc sẽ giảm từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc sáp nhập này dự kiến sẽ hoàn thành vào tháng 6 năm 2025. Trung ương sẽ ban hành tiêu chí cho các địa phương để xây dựng phương án sắp xếp, đồng thời nâng cao chất lượng cán bộ cấp xã để tương đương với cán bộ cấp tỉnh.",
-    "link": "https://vnexpress.net/toan-quoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Việt Nam dự kiến có bao nhiêu đơn vị hành chính cấp xã sau khi sáp nhập?",
-    "answers": [
-      {
-        "text": "2.500",
-        "correct": true
-      },
-      {
-        "text": "10.000",
-        "correct": false
-      },
-      {
-        "text": "8.500",
-        "correct": false
-      },
-      {
-        "text": "5.000",
         "correct": false
       }
     ]
@@ -3177,6 +3208,33 @@
     ]
   },
   {
+    "title": "Triệu hồi sản phẩm thể hiện trách nhiệm của hãng xe",
+    "content": "Triệu hồi sản phẩm là một hành động quan trọng trong ngành ôtô, thể hiện trách nhiệm của các hãng xe đối với khách hàng khi phát hiện rủi ro về sản phẩm. Mới đây, Yamaha Motor Việt Nam đã triệu hồi gần 160.000 xe sản xuất từ tháng 10/2021 đến tháng 11/2024 để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa. Hãng xe này cam kết sẽ đảm bảo an toàn cho người dùng và thực hiện kiểm tra miễn phí cho khách hàng.",
+    "link": "https://vnexpress.net/trieu-hoi-san-pham-the-hien-trach-nhiem-cua-hang-xe-4859319.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao Yamaha Motor Việt Nam triệu hồi gần 160.000 xe?",
+    "answers": [
+      {
+        "text": "Để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa.",
+        "correct": true
+      },
+      {
+        "text": "Để tăng doanh số bán hàng.",
+        "correct": false
+      },
+      {
+        "text": "Để giới thiệu mẫu xe mới.",
+        "correct": false
+      },
+      {
+        "text": "Để thay đổi thiết kế xe.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "6 nhóm thực phẩm người hen phế quản nên tránh",
     "content": "Bài viết liệt kê 6 nhóm thực phẩm mà người mắc bệnh hen phế quản nên tránh để phòng ngừa các cơn hen tái phát. Các loại thực phẩm này bao gồm thực phẩm giàu calo, thực phẩm có gas, thực phẩm chứa chất bảo quản, thực phẩm gây dị ứng, thực phẩm mặn và các chất béo không lành mạnh. Những thực phẩm này có thể làm trầm trọng thêm tình trạng bệnh và gây khó khăn trong việc hô hấp. Người bệnh nên chú ý đến chế độ ăn uống để kiểm soát triệu chứng hiệu quả hơn.",
     "link": "https://vnexpress.net/6-nhom-thuc-pham-nguoi-hen-phe-quan-nen-tranh-4859245.html",
@@ -3203,33 +3261,6 @@
       },
       {
         "text": "Thực phẩm chiên và đồ ăn nhanh",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Triệu hồi sản phẩm thể hiện trách nhiệm của hãng xe",
-    "content": "Triệu hồi sản phẩm là một hành động quan trọng trong ngành ôtô, thể hiện trách nhiệm của các hãng xe đối với khách hàng khi phát hiện rủi ro về sản phẩm. Mới đây, Yamaha Motor Việt Nam đã triệu hồi gần 160.000 xe sản xuất từ tháng 10/2021 đến tháng 11/2024 để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa. Hãng xe này cam kết sẽ đảm bảo an toàn cho người dùng và thực hiện kiểm tra miễn phí cho khách hàng.",
-    "link": "https://vnexpress.net/trieu-hoi-san-pham-the-hien-trach-nhiem-cua-hang-xe-4859319.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao Yamaha Motor Việt Nam triệu hồi gần 160.000 xe?",
-    "answers": [
-      {
-        "text": "Để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa.",
-        "correct": true
-      },
-      {
-        "text": "Để tăng doanh số bán hàng.",
-        "correct": false
-      },
-      {
-        "text": "Để giới thiệu mẫu xe mới.",
-        "correct": false
-      },
-      {
-        "text": "Để thay đổi thiết kế xe.",
         "correct": false
       }
     ]
@@ -4866,28 +4897,28 @@
     ]
   },
   {
-    "title": "Cúm ảnh hưởng công việc thế nào?",
-    "content": "Bệnh cúm có thể ảnh hưởng nghiêm trọng đến sức khỏe và hiệu suất làm việc của người lao động. Khi mắc cúm, người lao động thường phải nghỉ làm, gây gián đoạn trong sản xuất và cung ứng. Sự gia tăng ca mắc cúm trong doanh nghiệp có thể dẫn đến tổn thất kinh tế lớn, với hàng tỷ USD mất mát mỗi năm. Để giảm thiểu tác động của cúm, việc tiêm vaccine hàng năm là rất cần thiết.",
-    "link": "https://vnexpress.net/cum-anh-huong-cong-viec-the-nao-4859106.html",
+    "title": "Vì sao người bị rối loạn tiền đình dễ say xe?",
+    "content": "Người bị rối loạn tiền đình thường dễ bị say xe do sự không đồng nhất giữa thông tin từ mắt và cảm giác từ cơ quan tiền đình trong tai. Khi cơ thể di chuyển, nếu não nhận thông tin mắt thấy người ngồi yên nhưng tai lại cảm nhận chuyển động, sẽ gây ra triệu chứng như chóng mặt và buồn nôn. Để cải thiện tình trạng này, bệnh nhân nên chọn vị trí ngồi hợp lý khi di chuyển và có thể sử dụng một số mẹo như nhìn vào chân trời hoặc ngửi mùi hương từ vỏ cam, chanh. Nếu triệu chứng nặng, cần tham khảo ý kiến bác sĩ để được kiểm tra và điều trị thích hợp.",
+    "link": "https://vnexpress.net/vi-sao-nguoi-bi-roi-loan-tien-dinh-de-say-xe-4859081.html",
     "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Bệnh cúm ảnh hưởng đến công việc như thế nào?",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao người bị rối loạn tiền đình lại dễ say xe?",
     "answers": [
       {
-        "text": "Cúm làm giảm hiệu suất lao động và gây gián đoạn sản xuất.",
+        "text": "Vì có sự không đồng nhất giữa thông tin mắt và tai.",
         "correct": true
       },
       {
-        "text": "Cúm không ảnh hưởng gì đến công việc.",
+        "text": "Vì họ thường ngồi ở hàng ghế sau.",
         "correct": false
       },
       {
-        "text": "Cúm chỉ gây ra mệt mỏi nhưng không cần nghỉ làm.",
+        "text": "Vì họ không thích đi xe.",
         "correct": false
       },
       {
-        "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
+        "text": "Vì họ yếu sinh lý.",
         "correct": false
       }
     ]
@@ -4924,28 +4955,28 @@
     ]
   },
   {
-    "title": "Vì sao người bị rối loạn tiền đình dễ say xe?",
-    "content": "Người bị rối loạn tiền đình thường dễ bị say xe do sự không đồng nhất giữa thông tin từ mắt và cảm giác từ cơ quan tiền đình trong tai. Khi cơ thể di chuyển, nếu não nhận thông tin mắt thấy người ngồi yên nhưng tai lại cảm nhận chuyển động, sẽ gây ra triệu chứng như chóng mặt và buồn nôn. Để cải thiện tình trạng này, bệnh nhân nên chọn vị trí ngồi hợp lý khi di chuyển và có thể sử dụng một số mẹo như nhìn vào chân trời hoặc ngửi mùi hương từ vỏ cam, chanh. Nếu triệu chứng nặng, cần tham khảo ý kiến bác sĩ để được kiểm tra và điều trị thích hợp.",
-    "link": "https://vnexpress.net/vi-sao-nguoi-bi-roi-loan-tien-dinh-de-say-xe-4859081.html",
+    "title": "Cúm ảnh hưởng công việc thế nào?",
+    "content": "Bệnh cúm có thể ảnh hưởng nghiêm trọng đến sức khỏe và hiệu suất làm việc của người lao động. Khi mắc cúm, người lao động thường phải nghỉ làm, gây gián đoạn trong sản xuất và cung ứng. Sự gia tăng ca mắc cúm trong doanh nghiệp có thể dẫn đến tổn thất kinh tế lớn, với hàng tỷ USD mất mát mỗi năm. Để giảm thiểu tác động của cúm, việc tiêm vaccine hàng năm là rất cần thiết.",
+    "link": "https://vnexpress.net/cum-anh-huong-cong-viec-the-nao-4859106.html",
     "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Tại sao người bị rối loạn tiền đình lại dễ say xe?",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Bệnh cúm ảnh hưởng đến công việc như thế nào?",
     "answers": [
       {
-        "text": "Vì có sự không đồng nhất giữa thông tin mắt và tai.",
+        "text": "Cúm làm giảm hiệu suất lao động và gây gián đoạn sản xuất.",
         "correct": true
       },
       {
-        "text": "Vì họ thường ngồi ở hàng ghế sau.",
+        "text": "Cúm không ảnh hưởng gì đến công việc.",
         "correct": false
       },
       {
-        "text": "Vì họ không thích đi xe.",
+        "text": "Cúm chỉ gây ra mệt mỏi nhưng không cần nghỉ làm.",
         "correct": false
       },
       {
-        "text": "Vì họ yếu sinh lý.",
+        "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
         "correct": false
       }
     ]
