Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Koeman chê cầu thủ Man Utd không xứng lên tuyển",
+    "content": "HLV Ronald Koeman đã không triệu tập tiền đạo Joshua Zirkzee của Man Utd vào đội tuyển Hà Lan. Ông cho biết Zirkzee không đủ tốt ở thời điểm hiện tại và thường xuyên có những sai lầm trong các tình huống tấn công. Mặc dù Hà Lan đang gặp khó khăn trong việc tìm kiếm cầu thủ tấn công, Koeman khẳng định rằng chỉ những cầu thủ xứng đáng mới được lựa chọn, và Zirkzee sẽ có cơ hội trở lại vào một thời điểm khác nếu cải thiện phong độ.",
+    "link": "https://vnexpress.net/koeman-che-cau-thu-man-utd-khong-xung-len-tuyen-4859567.html",
+    "cat": "the-thao",
+    "positivity": 4,
+    "importance": 6,
+    "question": "Tại sao Koeman không triệu tập Zirkzee lên tuyển Hà Lan?",
+    "answers": [
+      {
+        "text": "Vì Zirkzee không đủ tốt ở thời điểm này",
+        "correct": true
+      },
+      {
+        "text": "Vì Zirkzee đang chấn thương",
+        "correct": false
+      },
+      {
+        "text": "Vì Zirkzee không đủ tuổi",
+        "correct": false
+      },
+      {
+        "text": "Vì Zirkzee không thi đấu cho Man Utd",
+        "correct": false
+      },
+      {
+        "text": "Vì Zirkzee không có kinh nghiệm quốc tế",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Huyện ngoại thành Hà Nội, huyện nông thôn mới Hưng Yên thu ngân sách lớn hơn nhiều tỉnh thành",
     "content": "Bài viết đề cập đến việc thu ngân sách của các huyện ngoại thành Hà Nội, đặc biệt là huyện Đông Anh, đạt mức cao hơn nhiều tỉnh thành khác. Huyện Đông Anh đã thu được 27.081 tỉ đồng trong năm 2024, vượt 205% dự toán. Điều này cho thấy sự chênh lệch lớn trong thu ngân sách giữa các địa phương, với nhiều huyện của Hà Nội có mức thu ngang ngửa với tỉnh, thành phố khác trên cả nước. Huyện Văn Giang của Hưng Yên cũng ghi nhận mức thu ấn tượng với 13.000 tỉ đồng, nhờ vào việc phát triển khu công nghiệp và thu hút đầu tư.",
     "link": "https://tuoitre.vn/huyen-ngoai-thanh-ha-noi-huyen-nong-thon-moi-hung-yen-thu-ngan-sach-lon-hon-nhieu-tinh-thanh-20250311124139333.htm",
@@ -2597,6 +2628,33 @@
     ]
   },
   {
+    "title": "Xe con phóng nhanh gặp xe tải bất ngờ mở cửa",
+    "content": "Vào ngày 10/3 tại đường tỉnh 78, Ba Vì, một vụ việc giao thông đã xảy ra khi một xe con đang phóng nhanh với tốc độ hơn 60 km/h gặp phải xe tải đang đỗ lề đường bất ngờ mở cửa. Mặc dù tài xế xe con gắn camera hành trình không giảm tốc độ, may mắn là không có tai nạn xảy ra. Các chuyên gia nhấn mạnh tầm quan trọng của việc giảm tốc độ khi gặp xe lớn đỗ, đồng thời cảnh báo tài xế xe tải cần quan sát kỹ trước khi mở cửa xe để tránh sự cố. Theo luật mới, hành vi mở cửa không an toàn có thể bị phạt đến 22 triệu đồng nếu dẫn đến tai nạn.",
+    "link": "https://vnexpress.net/xe-con-phong-nhanh-gap-xe-tai-bat-ngo-mo-cua-4859155.html",
+    "cat": "oto-xe-may",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Tại sao tài xế xe con nên giảm tốc độ khi thấy xe tải đỗ bên đường?",
+    "answers": [
+      {
+        "text": "Để tránh va chạm khi xe tải mở cửa bất ngờ.",
+        "correct": true
+      },
+      {
+        "text": "Để tiết kiệm nhiên liệu.",
+        "correct": false
+      },
+      {
+        "text": "Để tăng tốc độ di chuyển.",
+        "correct": false
+      },
+      {
+        "text": "Để giảm tiếng ồn khi lái xe.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tỷ phú Elon Musk chỉ cách vui vẻ, tự tin học tập dù AI phát triển bùng nổ",
     "content": "Tỷ phú Elon Musk gần đây đã chia sẻ hai lời khuyên cho những người trẻ trong bối cảnh trí tuệ nhân tạo (AI) phát triển mạnh mẽ, có khả năng thay thế nhiều công việc. Ông khuyến khích giới trẻ nên theo đuổi đam mê và trở nên hữu ích cho cộng đồng. Musk cũng nhấn mạnh tầm quan trọng của nỗ lực lao động để thích ứng với sự thay đổi do AI mang lại, đồng thời khuyến khích mọi người không nên nản lòng trước sự cạnh tranh từ công nghệ.",
     "link": "https://dantri.com.vn/giao-duc/ty-phu-elon-musk-chi-cach-vui-ve-tu-tin-hoc-tap-du-ai-phat-trien-bung-no-20250310160338475.htm",
@@ -2654,33 +2712,6 @@
       },
       {
         "text": "50 tầng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Xe con phóng nhanh gặp xe tải bất ngờ mở cửa",
-    "content": "Vào ngày 10/3 tại đường tỉnh 78, Ba Vì, một vụ việc giao thông đã xảy ra khi một xe con đang phóng nhanh với tốc độ hơn 60 km/h gặp phải xe tải đang đỗ lề đường bất ngờ mở cửa. Mặc dù tài xế xe con gắn camera hành trình không giảm tốc độ, may mắn là không có tai nạn xảy ra. Các chuyên gia nhấn mạnh tầm quan trọng của việc giảm tốc độ khi gặp xe lớn đỗ, đồng thời cảnh báo tài xế xe tải cần quan sát kỹ trước khi mở cửa xe để tránh sự cố. Theo luật mới, hành vi mở cửa không an toàn có thể bị phạt đến 22 triệu đồng nếu dẫn đến tai nạn.",
-    "link": "https://vnexpress.net/xe-con-phong-nhanh-gap-xe-tai-bat-ngo-mo-cua-4859155.html",
-    "cat": "oto-xe-may",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Tại sao tài xế xe con nên giảm tốc độ khi thấy xe tải đỗ bên đường?",
-    "answers": [
-      {
-        "text": "Để tránh va chạm khi xe tải mở cửa bất ngờ.",
-        "correct": true
-      },
-      {
-        "text": "Để tiết kiệm nhiên liệu.",
-        "correct": false
-      },
-      {
-        "text": "Để tăng tốc độ di chuyển.",
-        "correct": false
-      },
-      {
-        "text": "Để giảm tiếng ồn khi lái xe.",
         "correct": false
       }
     ]
@@ -3003,6 +3034,33 @@
     ]
   },
   {
+    "title": "Toàn quốc dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
+    "content": "Phó thủ tướng Nguyễn Hòa Bình thông báo rằng số lượng đơn vị hành chính cấp xã trên toàn quốc sẽ giảm từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc sáp nhập này dự kiến sẽ hoàn thành vào tháng 6 năm 2025. Trung ương sẽ ban hành tiêu chí cho các địa phương để xây dựng phương án sắp xếp, đồng thời nâng cao chất lượng cán bộ cấp xã để tương đương với cán bộ cấp tỉnh.",
+    "link": "https://vnexpress.net/toan-quoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Việt Nam dự kiến có bao nhiêu đơn vị hành chính cấp xã sau khi sáp nhập?",
+    "answers": [
+      {
+        "text": "2.500",
+        "correct": true
+      },
+      {
+        "text": "10.000",
+        "correct": false
+      },
+      {
+        "text": "8.500",
+        "correct": false
+      },
+      {
+        "text": "5.000",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Cả nước dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
     "content": "Phó thủ tướng Nguyễn Hòa Bình cho biết cả nước dự kiến sẽ giảm số lượng đơn vị hành chính cấp xã từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc này dự kiến sẽ hoàn thành vào tháng 6 tới, với các tiêu chí sẽ được Trung ương ban hành để các địa phương lập phương án sắp xếp. Chất lượng cán bộ cấp xã cũng sẽ được nâng cao, nhằm tăng cường hiệu quả quản lý.",
     "link": "https://vnexpress.net/ca-nuoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
@@ -3029,33 +3087,6 @@
       },
       {
         "text": "3.500",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Toàn quốc dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
-    "content": "Phó thủ tướng Nguyễn Hòa Bình thông báo rằng số lượng đơn vị hành chính cấp xã trên toàn quốc sẽ giảm từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc sáp nhập này dự kiến sẽ hoàn thành vào tháng 6 năm 2025. Trung ương sẽ ban hành tiêu chí cho các địa phương để xây dựng phương án sắp xếp, đồng thời nâng cao chất lượng cán bộ cấp xã để tương đương với cán bộ cấp tỉnh.",
-    "link": "https://vnexpress.net/toan-quoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Việt Nam dự kiến có bao nhiêu đơn vị hành chính cấp xã sau khi sáp nhập?",
-    "answers": [
-      {
-        "text": "2.500",
-        "correct": true
-      },
-      {
-        "text": "10.000",
-        "correct": false
-      },
-      {
-        "text": "8.500",
-        "correct": false
-      },
-      {
-        "text": "5.000",
         "correct": false
       }
     ]
@@ -5147,37 +5178,6 @@
       },
       {
         "text": "Tallon Griekspoor",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Vụ cháy chung cư mini làm 56 người chết: Chủ tọa hỏi chủ nhà có chi tiền để được bỏ qua sai phạm?",
-    "content": "Vụ cháy chung cư mini ở phố Khương Hạ, Hà Nội đã khiến 56 người thiệt mạng và 44 người bị thương. Chủ chung cư, Nghiêm Quang Minh, đang bị xét xử về tội 'vi phạm quy định về phòng cháy chữa cháy' và bị cáo buộc đã xây dựng trái phép, vượt quá quy định về số tầng và diện tích. Tại phiên tòa, chủ tọa đã nhiều lần truy vấn về khả năng ông Minh hối lộ cán bộ để được làm ngơ cho các sai phạm, nhưng ông Minh khẳng định không chi tiền cho ai.",
-    "link": "https://tuoitre.vn/vu-chay-chung-cu-mini-lam-56-nguoi-chet-chu-toa-hoi-chu-nha-co-chi-tien-de-duoc-bo-qua-sai-pham-2025031013432117.htm",
-    "cat": "phap-luat",
-    "positivity": 1,
-    "importance": 10,
-    "question": "Chủ chung cư mini có phải chi tiền để được bỏ qua sai phạm không?",
-    "answers": [
-      {
-        "text": "Không rõ",
-        "correct": false
-      },
-      {
-        "text": "Có thể",
-        "correct": false
-      },
-      {
-        "text": "Không",
-        "correct": true
-      },
-      {
-        "text": "Có",
-        "correct": false
-      },
-      {
-        "text": "Không chắc",
         "correct": false
       }
     ]
