Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -112,6 +112,33 @@
     ]
   },
   {
+    "title": "Lịch thi học kì 2 của học sinh phổ thông trên cả nước như thế nào?",
+    "content": "Lịch thi học kỳ 2 năm học 2024-2025 cho học sinh phổ thông trên cả nước sẽ do Chủ tịch UBND tỉnh, thành phố quyết định, phù hợp với tình hình địa phương. Theo quy định của Bộ GD&ĐT, học kỳ 2 sẽ bắt đầu sau ngày 17/1/2025 và kết thúc trước 31/5/2025, với 17 tuần học. Các kỳ thi tốt nghiệp trung học phổ thông dự kiến diễn ra vào 26 và 27/6/2025, và lịch thi cụ thể sẽ được điều chỉnh theo từng địa phương để đảm bảo thực hiện đầy đủ chương trình giáo dục.",
+    "link": "https://dantri.com.vn/giao-duc/lich-thi-hoc-ki-2-cua-hoc-sinh-pho-thong-tren-ca-nuoc-nhu-the-nao-20250311115603384.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Lịch thi học kỳ 2 năm 2024-2025 diễn ra như thế nào?",
+    "answers": [
+      {
+        "text": "Chủ tịch UBND tỉnh quyết định lịch thi phù hợp với địa phương.",
+        "correct": true
+      },
+      {
+        "text": "Tất cả học sinh sẽ thi vào cùng một ngày.",
+        "correct": false
+      },
+      {
+        "text": "Lịch thi do Bộ GD&ĐT hoàn toàn quyết định.",
+        "correct": false
+      },
+      {
+        "text": "Học sinh không phải thi nếu không muốn.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Koeman chê cầu thủ Man Utd không xứng lên tuyển",
     "content": "HLV Ronald Koeman đã không triệu tập tiền đạo Joshua Zirkzee của Man Utd vào đội tuyển Hà Lan. Ông cho biết Zirkzee không đủ tốt ở thời điểm hiện tại và thường xuyên có những sai lầm trong các tình huống tấn công. Mặc dù Hà Lan đang gặp khó khăn trong việc tìm kiếm cầu thủ tấn công, Koeman khẳng định rằng chỉ những cầu thủ xứng đáng mới được lựa chọn, và Zirkzee sẽ có cơ hội trở lại vào một thời điểm khác nếu cải thiện phong độ.",
     "link": "https://vnexpress.net/koeman-che-cau-thu-man-utd-khong-xung-len-tuyen-4859567.html",
@@ -2269,28 +2296,32 @@
     ]
   },
   {
-    "title": "Xe con phóng nhanh gặp xe tải bất ngờ mở cửa",
-    "content": "Vào ngày 10/3 tại đường tỉnh 78, Ba Vì, một vụ việc giao thông đã xảy ra khi một xe con đang phóng nhanh với tốc độ hơn 60 km/h gặp phải xe tải đang đỗ lề đường bất ngờ mở cửa. Mặc dù tài xế xe con gắn camera hành trình không giảm tốc độ, may mắn là không có tai nạn xảy ra. Các chuyên gia nhấn mạnh tầm quan trọng của việc giảm tốc độ khi gặp xe lớn đỗ, đồng thời cảnh báo tài xế xe tải cần quan sát kỹ trước khi mở cửa xe để tránh sự cố. Theo luật mới, hành vi mở cửa không an toàn có thể bị phạt đến 22 triệu đồng nếu dẫn đến tai nạn.",
-    "link": "https://vnexpress.net/xe-con-phong-nhanh-gap-xe-tai-bat-ngo-mo-cua-4859155.html",
-    "cat": "oto-xe-may",
-    "positivity": 5,
+    "title": "Hà Nội cho phép nâng chiều cao khu tập thể Thành Công lên 40 tầng",
+    "content": "Hà Nội đã cho phép quận Ba Đình nghiên cứu phương án nâng chiều cao tối đa lên 40 tầng cho khu chung cư cũ Thành Công trong quá trình cải tạo, tái thiết. Quyết định này nhằm kết nối không gian hồ Thành Công với các khu vực xanh và mở rộng trục đường nội khu. Thành phố yêu cầu quận phải hoàn thiện phương án trình Sở Quy hoạch Kiến trúc trước ngày 25/3, trong khi cũng đề xuất nâng cao tầng cho các khu chung cư khác trên địa bàn.",
+    "link": "https://vnexpress.net/ha-noi-cho-phep-nang-chieu-cao-khu-tap-the-thanh-cong-len-40-tang-4859359.html",
+    "cat": "thoi-su",
+    "positivity": 8,
     "importance": 7,
-    "question": "Tại sao tài xế xe con nên giảm tốc độ khi thấy xe tải đỗ bên đường?",
+    "question": "Hà Nội đã cho phép nâng chiều cao khu tập thể Thành Công lên bao nhiêu tầng?",
     "answers": [
       {
-        "text": "Để tránh va chạm khi xe tải mở cửa bất ngờ.",
+        "text": "40 tầng",
         "correct": true
       },
       {
-        "text": "Để tiết kiệm nhiên liệu.",
+        "text": "30 tầng",
         "correct": false
       },
       {
-        "text": "Để tăng tốc độ di chuyển.",
+        "text": "24 tầng",
         "correct": false
       },
       {
-        "text": "Để giảm tiếng ồn khi lái xe.",
+        "text": "20 tầng",
+        "correct": false
+      },
+      {
+        "text": "50 tầng",
         "correct": false
       }
     ]
@@ -2327,6 +2358,33 @@
     ]
   },
   {
+    "title": "Xe con phóng nhanh gặp xe tải bất ngờ mở cửa",
+    "content": "Vào ngày 10/3 tại đường tỉnh 78, Ba Vì, một vụ việc giao thông đã xảy ra khi một xe con đang phóng nhanh với tốc độ hơn 60 km/h gặp phải xe tải đang đỗ lề đường bất ngờ mở cửa. Mặc dù tài xế xe con gắn camera hành trình không giảm tốc độ, may mắn là không có tai nạn xảy ra. Các chuyên gia nhấn mạnh tầm quan trọng của việc giảm tốc độ khi gặp xe lớn đỗ, đồng thời cảnh báo tài xế xe tải cần quan sát kỹ trước khi mở cửa xe để tránh sự cố. Theo luật mới, hành vi mở cửa không an toàn có thể bị phạt đến 22 triệu đồng nếu dẫn đến tai nạn.",
+    "link": "https://vnexpress.net/xe-con-phong-nhanh-gap-xe-tai-bat-ngo-mo-cua-4859155.html",
+    "cat": "oto-xe-may",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Tại sao tài xế xe con nên giảm tốc độ khi thấy xe tải đỗ bên đường?",
+    "answers": [
+      {
+        "text": "Để tránh va chạm khi xe tải mở cửa bất ngờ.",
+        "correct": true
+      },
+      {
+        "text": "Để tiết kiệm nhiên liệu.",
+        "correct": false
+      },
+      {
+        "text": "Để tăng tốc độ di chuyển.",
+        "correct": false
+      },
+      {
+        "text": "Để giảm tiếng ồn khi lái xe.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tỷ phú Elon Musk chỉ cách vui vẻ, tự tin học tập dù AI phát triển bùng nổ",
     "content": "Tỷ phú Elon Musk gần đây đã chia sẻ hai lời khuyên cho những người trẻ trong bối cảnh trí tuệ nhân tạo (AI) phát triển mạnh mẽ, có khả năng thay thế nhiều công việc. Ông khuyến khích giới trẻ nên theo đuổi đam mê và trở nên hữu ích cho cộng đồng. Musk cũng nhấn mạnh tầm quan trọng của nỗ lực lao động để thích ứng với sự thay đổi do AI mang lại, đồng thời khuyến khích mọi người không nên nản lòng trước sự cạnh tranh từ công nghệ.",
     "link": "https://dantri.com.vn/giao-duc/ty-phu-elon-musk-chi-cach-vui-ve-tu-tin-hoc-tap-du-ai-phat-trien-bung-no-20250310160338475.htm",
@@ -2353,37 +2411,6 @@
       },
       {
         "text": "Không cần lo lắng về sự phát triển của AI",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Hà Nội cho phép nâng chiều cao khu tập thể Thành Công lên 40 tầng",
-    "content": "Hà Nội đã cho phép quận Ba Đình nghiên cứu phương án nâng chiều cao tối đa lên 40 tầng cho khu chung cư cũ Thành Công trong quá trình cải tạo, tái thiết. Quyết định này nhằm kết nối không gian hồ Thành Công với các khu vực xanh và mở rộng trục đường nội khu. Thành phố yêu cầu quận phải hoàn thiện phương án trình Sở Quy hoạch Kiến trúc trước ngày 25/3, trong khi cũng đề xuất nâng cao tầng cho các khu chung cư khác trên địa bàn.",
-    "link": "https://vnexpress.net/ha-noi-cho-phep-nang-chieu-cao-khu-tap-the-thanh-cong-len-40-tang-4859359.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Hà Nội đã cho phép nâng chiều cao khu tập thể Thành Công lên bao nhiêu tầng?",
-    "answers": [
-      {
-        "text": "40 tầng",
-        "correct": true
-      },
-      {
-        "text": "30 tầng",
-        "correct": false
-      },
-      {
-        "text": "24 tầng",
-        "correct": false
-      },
-      {
-        "text": "20 tầng",
-        "correct": false
-      },
-      {
-        "text": "50 tầng",
         "correct": false
       }
     ]
@@ -2988,6 +3015,33 @@
     ]
   },
   {
+    "title": "Triệu hồi sản phẩm thể hiện trách nhiệm của hãng xe",
+    "content": "Triệu hồi sản phẩm là một hành động quan trọng trong ngành ôtô, thể hiện trách nhiệm của các hãng xe đối với khách hàng khi phát hiện rủi ro về sản phẩm. Mới đây, Yamaha Motor Việt Nam đã triệu hồi gần 160.000 xe sản xuất từ tháng 10/2021 đến tháng 11/2024 để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa. Hãng xe này cam kết sẽ đảm bảo an toàn cho người dùng và thực hiện kiểm tra miễn phí cho khách hàng.",
+    "link": "https://vnexpress.net/trieu-hoi-san-pham-the-hien-trach-nhiem-cua-hang-xe-4859319.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao Yamaha Motor Việt Nam triệu hồi gần 160.000 xe?",
+    "answers": [
+      {
+        "text": "Để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa.",
+        "correct": true
+      },
+      {
+        "text": "Để tăng doanh số bán hàng.",
+        "correct": false
+      },
+      {
+        "text": "Để giới thiệu mẫu xe mới.",
+        "correct": false
+      },
+      {
+        "text": "Để thay đổi thiết kế xe.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "6 nhóm thực phẩm người hen phế quản nên tránh",
     "content": "Bài viết liệt kê 6 nhóm thực phẩm mà người mắc bệnh hen phế quản nên tránh để phòng ngừa các cơn hen tái phát. Các loại thực phẩm này bao gồm thực phẩm giàu calo, thực phẩm có gas, thực phẩm chứa chất bảo quản, thực phẩm gây dị ứng, thực phẩm mặn và các chất béo không lành mạnh. Những thực phẩm này có thể làm trầm trọng thêm tình trạng bệnh và gây khó khăn trong việc hô hấp. Người bệnh nên chú ý đến chế độ ăn uống để kiểm soát triệu chứng hiệu quả hơn.",
     "link": "https://vnexpress.net/6-nhom-thuc-pham-nguoi-hen-phe-quan-nen-tranh-4859245.html",
@@ -3014,33 +3068,6 @@
       },
       {
         "text": "Thực phẩm chiên và đồ ăn nhanh",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Triệu hồi sản phẩm thể hiện trách nhiệm của hãng xe",
-    "content": "Triệu hồi sản phẩm là một hành động quan trọng trong ngành ôtô, thể hiện trách nhiệm của các hãng xe đối với khách hàng khi phát hiện rủi ro về sản phẩm. Mới đây, Yamaha Motor Việt Nam đã triệu hồi gần 160.000 xe sản xuất từ tháng 10/2021 đến tháng 11/2024 để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa. Hãng xe này cam kết sẽ đảm bảo an toàn cho người dùng và thực hiện kiểm tra miễn phí cho khách hàng.",
-    "link": "https://vnexpress.net/trieu-hoi-san-pham-the-hien-trach-nhiem-cua-hang-xe-4859319.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao Yamaha Motor Việt Nam triệu hồi gần 160.000 xe?",
-    "answers": [
-      {
-        "text": "Để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa.",
-        "correct": true
-      },
-      {
-        "text": "Để tăng doanh số bán hàng.",
-        "correct": false
-      },
-      {
-        "text": "Để giới thiệu mẫu xe mới.",
-        "correct": false
-      },
-      {
-        "text": "Để thay đổi thiết kế xe.",
         "correct": false
       }
     ]
@@ -4444,91 +4471,6 @@
       },
       {
         "text": "Vì hệ thống phanh bị lỗi",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Anh hứa chuyển tiền bán Chelsea của tỷ phú Nga Abramovich cho Ukraine",
-    "content": "Bộ trưởng Ngoại giao Anh David Lammy đã thông báo rằng chính phủ Anh sẽ chuyển hàng tỷ USD từ doanh thu bán câu lạc bộ Chelsea của tỷ phú Nga Roman Abramovich để hỗ trợ Ukraine. Ông Abramovich đã buộc phải bán Chelsea sau khi bị áp dụng lệnh trừng phạt vì cuộc chiến tại Ukraine. Tuy nhiên, có thông tin cho rằng ông muốn một phần số tiền này được gửi cho những người Nga bị ảnh hưởng bởi chiến sự, điều này có thể gây khó khăn trong việc thực hiện cam kết hỗ trợ Ukraine.",
-    "link": "https://dantri.com.vn/the-gioi/anh-hua-chuyen-tien-ban-chelsea-cua-ty-phu-nga-abramovich-cho-ukraine-20250310135301307.htm",
-    "cat": "the-gioi",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Anh có kế hoạch chuyển tiền bán Chelsea của Abramovich cho ai?",
-    "answers": [
-      {
-        "text": "Ukraine",
-        "correct": true
-      },
-      {
-        "text": "Nga",
-        "correct": false
-      },
-      {
-        "text": "Mỹ",
-        "correct": false
-      },
-      {
-        "text": "Châu Âu",
-        "correct": false
-      },
-      {
-        "text": "Israel",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tranh cãi về quả sút phạt của Bruno Fernandes",
-    "content": "Trận đấu giữa Manchester United và Arsenal vào ngày 9/3 đã gây tranh cãi xung quanh quả sút phạt của Bruno Fernandes. Nhiều chuyên gia cho rằng trọng tài đã để hàng rào Arsenal đứng quá xa, tạo điều kiện cho Fernandes dễ dàng ghi bàn. Khoảng cách giữa vị trí đặt bóng và hàng rào là 10,2 m, dài hơn quy định 9,1 m. CĐV Arsenal cho rằng sai lầm này đã ảnh hưởng đến kết quả trận đấu, trong khi CĐV Man Utd chỉ trích việc phàn nàn về khoảng cách hàng rào.",
-    "link": "https://vnexpress.net/tranh-cai-ve-qua-sut-phat-cua-bruno-fernandes-4859096.html",
-    "cat": "the-thao",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Quả sút phạt của Bruno Fernandes gây tranh cãi vì lý do gì?",
-    "answers": [
-      {
-        "text": "Hàng rào Arsenal đứng quá xa",
-        "correct": true
-      },
-      {
-        "text": "Fernandes sút phạt không chính xác",
-        "correct": false
-      },
-      {
-        "text": "Trọng tài không quan sát kỹ",
-        "correct": false
-      },
-      {
-        "text": "Arsenal không có cầu thủ cao",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Triều Tiên phóng loạt tên lửa, cảnh báo nguy cơ xung đột",
-    "content": "Triều Tiên đã phóng hàng loạt tên lửa đạn đạo vào ngày 10/3, phản ứng trước cuộc tập trận quân sự chung giữa Mỹ và Hàn Quốc. Vụ phóng này được coi là hành động khiêu khích nguy hiểm, làm gia tăng căng thẳng trên bán đảo Triều Tiên. Bộ Ngoại giao Triều Tiên chỉ trích các cuộc tập trận này và cảnh báo rằng chúng có thể dẫn đến xung đột giữa hai bên.",
-    "link": "https://dantri.com.vn/the-gioi/trieu-tien-phong-loat-ten-lua-canh-bao-nguy-co-xung-dot-20250310135700718.htm",
-    "cat": "the-gioi",
-    "positivity": 2,
-    "importance": 8,
-    "question": "Tại sao Triều Tiên lại phóng loạt tên lửa vào ngày 10/3?",
-    "answers": [
-      {
-        "text": "Vì cuộc tập trận quân sự chung giữa Mỹ và Hàn Quốc.",
-        "correct": true
-      },
-      {
-        "text": "Để thử nghiệm công nghệ tên lửa mới.",
-        "correct": false
-      },
-      {
-        "text": "Để thể hiện sức mạnh quân sự của mình.",
-        "correct": false
-      },
-      {
-        "text": "Vì lý do kinh tế.",
         "correct": false
       }
     ]
